Created Pages for Recipe 1 and Recipe 2
Self-Explanatory

--- a/templates/recipes_list.html
+++ b/templates/recipes_list.html
@@ -6,7 +6,7 @@
             <ul>
                 {%for recipes in recipes %}
                     <li>
-                        <a href="{{recipes.link}}"> {{recipes.name}} </a>
+                        <a href="/ledger{{recipes.link}}"> {{recipes.name}} </a>
                     </li>    
                 {%endfor%}
             </ul>
