Completed Recipe Pages
Completed the Lists for the Recipe Pages. It now displays ingredient name and quantity

--- a/templates/recipe1.html
+++ b/templates/recipe1.html
@@ -3,5 +3,13 @@
 
     {% block title %}Recipe Book Homepage{% endblock %}
         {% block content %}
-          <p>test</p>
+        <ul>
+            
+            {%for ingredient_info in ingredients %}
+                <li>
+                    <p> {{ingredient_info.name}} - {{ingredient_info.quantity}} </p>
+                </li>    
+            {%endfor%}
+            
+        </ul>
         {% endblock %}
