Implemented Recipe Model for Homepage
1. Integrated get_absolute_url into the recipes_list template
2. deleted repetitive templates
3. fixed issues with url files
4. fixed an issue with the reverse function in models. Specifically added "ledger'
5. implemented models in view.py

--- a/templates/recipes_list.html
+++ b/templates/recipes_list.html
@@ -4,9 +4,9 @@
     {% block title %}Recipe Book Homepage{% endblock %}
         {% block content %}
             <ul>
-                {%for recipes in recipes %}
+                {%for n in recipes %}
                     <li>
-                        <a href="/ledger{{recipes.link}}"> {{recipes.name}} </a>
+                        <a href="{{n.get_absolute_url}}"> Recipe: {{n.name}} </a>
                     </li>    
                 {%endfor%}
             </ul>
