finished templates and debugged
1. finished integration of models with templates
2. implemented search functions in admin
3. edited urls.py in ledger and recipe book so that the model no longer requires :ledger
4. removed :ledger from models
5. renamed variables in view to avoid confusion

--- a/ledger/templates/recipe_detail.html
+++ b/ledger/templates/recipe_detail.html
@@ -5,9 +5,9 @@
         {% block content %}
         <ul>
             
-            {%for ingredient_info in ingredients %}
+            {%for var in recipe.ingredients.all %}
                 <li>
-                    <p> {{ingredient_info.name}} - {{ingredient_info.quantity}} </p>
+                    <p> {{var.ingredient.name}} - {{var.Quantity}}  </p>
                 </li>    
             {%endfor%}
             
