--- a/ledger/templates/base.html
+++ b/ledger/templates/base.html
@@ -9,6 +9,11 @@
 <body>
     <div id="content">
         <h3>Recipe Book</h3>
+        <form method="POST" action="{% url 'logout' %}">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Logout</button>
+        </form>
         {% block content %}{% endblock %}
     </div>
 </body>
