--- a/ledger/templates/base.html
+++ b/ledger/templates/base.html
@@ -1,8 +1,9 @@
 <!-- taskapp/templates/base.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
     {% block styles %}{% endblock %}
 </head>
 <body>
