--- a/ledger/templates/recipe_detail.html
+++ b/ledger/templates/recipe_detail.html
@@ -6,10 +6,17 @@
 {% block page_heading %}Recipe: {{ recipe.name }}{% endblock %}
 
 {% block content %}
+    {% if recipe.images.all %}
+        {% for image in recipe.images.all %}
+        <img src="{{ image.recipe_image.url }}" 
+            alt="{{ image.description|default:'Recipe image' }}" 
+            style="max-width: 150px;">
+        
+        {% endfor %}
+    {% endif %}
     <h4>Author: {{ recipe.author }}</h4>
     <h4>Created On: {{ recipe.created_on }}</h4>
     <h4>Updated On: {{ recipe.updated_on }}</h4>
-
     <h4>Ingredients:</h4>
     {% for var in recipe.ingredients.all %}
         <p>{{ var.ingredient.name }} - {{ var.Quantity }}</p>
